# ephemeral-magic-block-casino-game

./: Anchor.toml  Dockerfile
app/: package-lock.json  package.json
app/src/app/: App.tsx  aibet.json  globals.css  layout.tsx  page.tsx  providers.tsx  tailwind.config.js
app/src/app/admin/: page.tsx
app/src/app/components/: Particles.tsx  moon-background.tsx  moon-icons.tsx
app/src/app/components/favicon/: index.ts
app/src/app/components/ui/: badge.tsx
app/src/app/services/: transactions.ts
app/src/app/types/: accounts.ts  assets.d.ts  events.ts  idl.tsx  program.ts
platformdumps/: dumps  lib  moonbetsv2
programs/moonbets/: Cargo.toml
programs/moonbets/src/: lib.rs
tests/: moonbets.ts
wallets/: mainnet_wallet.json
