[package]
name = "aibet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aibet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "2.2.1"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.2.4", features = ["anchor"] }
ephemeral-vrf-sdk = { version = "0.1.2", features = ["anchor"] }
